# todo

./: .dockerignore  .gitignore  Dockerfile  MAINTENANCE.md  README.md  package-lock.json  package.json  tsconfig.json
backend/: .env.example  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: routes.py  sse.py
backend/app/core/: db.py  services.py  utils.py
client/: README.md  generate.sh  index.ts  openapi.json  sse.ts
